--- a/index.html
+++ b/index.html
@@ -110,9 +110,13 @@
             <div class="content">
                 <h2>Resume</h2>
                 <hr>
-                <p style="text-align:center">
+                <!-- <p style="text-align:center"> -->
+                    
+                    <div class="frame">
                     <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no">
-                    </iframe></p>
+                    </iframe>
+                <!-- </p> -->
+                    <div>
             </div>
         </div>
 
@@ -120,7 +124,9 @@
         <div class="part" data-background="black">
             <div class="content">
                 <h2>Projects</h2>
+
                 <hr>
+              
 
 
 
@@ -141,7 +147,7 @@
                         <br>
                         <h1> PulseR </h1>
                         <div class="container">
-                                <a href="index.html" ><img src="pulser1.PNG" style="vertical-align: middle" class="image">
+                                <a href="pulseR.html" ><img src="pulser1.PNG" style="vertical-align: middle" class="image">
                         </div>
                     </div>
 
@@ -149,7 +155,7 @@
                         <br>
                         <h1> RC Paint </h1>
                         <div class="container">
-                            <img src="rcPaint.PNG" style="vertical-align: middle" class="image">
+                                <a href="pulseR.html" ><img src="rcPaint.PNG" style="vertical-align: middle" class="image">
                         </div>
 
                     </div>
