--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <br>
                         <h1> PulseR </h1>
                         <div class="container">
-                                <a href="pulseR.html" ><img src="pulser1.PNG" style="vertical-align: middle" class="image">
+                                <a href="pulseR.html" ><img src="pulseR1.PNG" style="vertical-align: middle" class="image">
                         </div>
                     </div>
 
