--- a/pulseR.html
+++ b/pulseR.html
@@ -50,10 +50,10 @@
             <br>
             <div class="roww">
               <div class=column>
-                <img src="pulseR2.jpg" class="img">
+                <img src="pulseR2.jpg" class="img" style = "width:100%">
               </div>
-              <div class=column2>
-                <img src="pulseRM.jpg" class="img">
+              <div class=column>
+                <img src="pulseRM.jpg" class="img" style = "width:76%">
               </div>
             </div>
           </p>
@@ -63,7 +63,10 @@
         <!-- <div class="col-sm-4" style="background-color:lavenderblush;">.col-sm-4</div>
               <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div> -->
       </div>
+      
     </div>
+
+    
 
 </body>
 
