finished major updates

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <a href="https://www.linkedin.com/in/josezurita777/" class="fa fa-linkedin"></a>
                                 <a href="https://twitter.com/NoWayJosez" class="fa fa-twitter"></a>
                                 <a href="https://www.instagram.com/nowayjosez/?hl=en" class="fa fa-instagram"></a>
-                                <a href="https://www.instagram.com/nowayjosez/?hl=en" class="fa fa-github"></a>
+                                <a href="https://github.com/jez253/PersonalWebsite" class="fa fa-github"></a>
                             </div>
                         </p>
                     </div>
@@ -119,7 +119,10 @@
                 <!-- <p style="text-align:center"> -->
                     
                     <div class="frame">
-                    <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no">
+                    <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no"class="myIframe" style=" border:none; "></iframe>
+                    <script type="text/javascript" language="javascript">
+                        $('.myIframe').css('height', $(window).height() + 'px');
+                    </script>
                     </iframe>
                 <!-- </p> -->
                     <div>
@@ -140,7 +143,7 @@
 
                     <div class="col-sm-4">
                         <br>
-                        <h1> Budgetmap </h1>
+                        <a href="budget.html" ><h1> Budgetmap </h1></a>
 
                         <div class="container">
                            <a href="budget.html" > <img src="Budgetmap1.PNG" style="vertical-align: middle" class="image"> 
@@ -153,7 +156,7 @@
                         <br>
                         <h1> PulseR </h1>
                         <div class="container">
-                                <a href="pulseR.html" ><img src="pulseR1.PNG" style="vertical-align: middle" class="image">
+                                <a href="pulseR.html" ><img src="pulseR1.PNG"  style="vertical-align: middle" class="image">
                         </div>
                     </div>
 
@@ -161,7 +164,7 @@
                         <br>
                         <h1> RC Paint </h1>
                         <div class="container">
-                                <a href="pulseR.html" ><img src="rcPaint.PNG" style="vertical-align: middle" class="image"></a>
+                                <a href="RCPaint.html" ><img src="rcPaint.PNG"  style="vertical-align: middle" class="image"></a>
                         </div>
 
                     </div>
@@ -180,7 +183,18 @@
         <br>
         <br>
         <div class="footer">
-                <p>Footer</p>
+            <!-- <br> -->
+            <!-- <br> -->
+                <p2>
+
+                Created to demonstrate my skills and portfolio
+
+                    <br>
+                    Would like to thank EZgiphs and pexels as well as artists, creators and 
+                   photographers whose work was used in this website
+                   <br>
+                   Created by Jose Zurita-Oatley
+                </p2>
               </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
