--- a/pulseR.html
+++ b/pulseR.html
@@ -18,7 +18,7 @@
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="budget.html">BudgetMap</a>
-      <a href="#Resume">rcPaint</a>
+      <a href="RCPaint.html">rcPaint</a>
 
     </div>
 
