--- a/budget.html
+++ b/budget.html
@@ -14,7 +14,7 @@
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="pulseR.html">PulseR</a>
-      <a href="#Resume">rcPaint</a>
+      <a href="RCPaint.html">rcPaint</a>
 
     </div>
 
