resume updated/uploaded

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                         <p>
                             I am a software developer looking to to expand my knowledge in all things tech related. I
                             have front end experience both in mobile and
-                            web development. I really love interacting with people and really enjoy group projects. In
+                            web development. I really love interacting with people and really enjoy projects that not only challenge me but allow me to express 
+                            my creativity. In
                             my spare time I love to do all things outdoors
                             as well as photography. Some of my core values include, accountability, dependebility and
                             open mindedness.
