--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <!-- <p style="text-align:center"> -->
 
                 <div class="frame">
-                    <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no"
+                        <iframe src="Resume4.pdf" width="637" height="875" scrolling="no" overflow="hidden"
                         class="myIframe" style=" border:none; "></iframe>
                     <script type="text/javascript" language="javascript">
                         $('.myIframe').css('height', $(window).height() + 'px');
