--- a/index.html
+++ b/index.html
@@ -115,102 +115,102 @@
 
 
         <div id="Resume"></div>
-        <div class="part" data-background="#2C2C2C">
-            <div class="content">
-                <h2>Resume</h2>
-                <hr>
-                <!-- <p style="text-align:center"> -->
 
-                <div class="frame">
-                    <iframe src="Resume4.pdf" width="637" height="875" scrolling="no" overflow="hidden"
-                        class="myIframe" style=" border:none; "></iframe>
-                    <script type="text/javascript" language="javascript">
-                        $('.myIframe').css('height', $(window).height() + 'px');
-                    </script>
-                    
-                    <!-- </p> -->
-                    
-                </div>
+        <div class="content">
+            <h2>Resume</h2>
+            <hr>
+            <!-- <p style="text-align:center"> -->
 
-                <div id="Projects"></div>
-                <div class="part" data-background="black">
-                    <div class="content">
-                        <h2>Projects</h2>
+            <div class="frame">
+                <iframe src="Resume4.pdf" width="637" height="875" scrolling="no" overflow="hidden" class="myIframe"
+                    style=" border:none; "></iframe>
+                <script type="text/javascript" language="javascript">
+                    $('.myIframe').css('height', $(window).height() + 'px');
+                </script>
 
-                        <hr>
+                <!-- </p> -->
 
+            </div>
 
+            <div id="Projects"></div>
+            <div class="part" data-background="black">
+                <div class="content">
+                    <h2>Projects</h2>
+
+                    <hr>
 
 
-                        <div class="row">
-
-                            <div class="col-sm-4">
-                                <br>
-                                <a href="budget.html">
-                                    <h1> Budgetmap </h1>
-                                </a>
-
-                                <div class="container">
-                                    <a href="budget.html"> <img src="Budgetmap1.PNG" style="vertical-align: middle"
-                                            class="image">
-                                </div>
 
 
+                    <div class="row">
+
+                        <div class="col-sm-4">
+                            <br>
+                            <a href="budget.html">
+                                <h1> Budgetmap </h1>
+                            </a>
+
+                            <div class="container">
+                                <a href="budget.html"> <img src="Budgetmap1.PNG" style="vertical-align: middle"
+                                        class="image">
                             </div>
-
-                            <div class="col-sm-4">
-                                <br>
-                                <h1> PulseR </h1>
-                                <div class="container">
-                                    <a href="pulseR.html"><img src="pulseR1.PNG" style="vertical-align: middle"
-                                            class="image">
-                                </div>
-                            </div>
-
-                            <div class="col-sm-4">
-                                <br>
-                                <h1> RC Paint </h1>
-                                <div class="container">
-                                    <a href="RCPaint.html"><img src="rcPaint.PNG" style="vertical-align: middle"
-                                            class="image"></a>
-                                </div>
-
-                            </div>
-
-
 
 
                         </div>
 
+                        <div class="col-sm-4">
+                            <br>
+                            <h1> PulseR </h1>
+                            <div class="container">
+                                <a href="pulseR.html"><img src="pulseR1.PNG" style="vertical-align: middle"
+                                        class="image">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <br>
+                            <h1> RC Paint </h1>
+                            <div class="container">
+                                <a href="RCPaint.html"><img src="rcPaint.PNG" style="vertical-align: middle"
+                                        class="image"></a>
+                            </div>
+
+                        </div>
+
+
+
 
                     </div>
 
-                </div>
-                <br>
-                <br>
-                <br>
-                <br>
-                <div class="footer">
-                    <!-- <br> -->
-                    <!-- <br> -->
-                    <p2>
 
-                        Created to demonstrate my skills and portfolio
-
-                        <br>
-                        Would like to thank EZgiphs and pexels as well as artists, creators and
-                        photographers whose work was used in this website
-                        <br>
-                        Created by Jose Zurita-Oatley
-                    </p2>
                 </div>
 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-                <script src="jquery.scrollie.min.js"></script>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="footer">
+                <!-- <br> -->
+                <!-- <br> -->
+                <p2>
 
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-                <script src="script.js"></script>
+                    Created to demonstrate my skills and portfolio
+
+                    <br>
+                    Would like to thank EZgiphs and pexels as well as artists, creators and
+                    photographers whose work was used in this website
+                    <br>
+                    Created by Jose Zurita-Oatley
+                </p2>
+            </div>
+
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+            <script src="jquery.scrollie.min.js"></script>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+            <script src="script.js"></script>
 </body>
 
 </html>
