--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 
 
         <div id="Resume"></div>
-        <div class="part" data-background="#2C2C2C">
+        <!-- <div class="part" data-background="#2C2C2C"> -->
+
             <div class="content">
                 <h2>Resume</h2>
                 <hr>
@@ -132,9 +133,10 @@
                 </div>
 
                 <div id="Projects"></div>
-                <div class="part" data-background="black">
+                <!-- <div class="part" data-background="black"> -->
                     <div class="content">
                         <h2>Projects</h2>
+
 
                         <hr>
 
@@ -184,7 +186,7 @@
 
                     </div>
 
-                </div>
+                <!-- </div> -->
                 <br>
                 <br>
                 <br>
