div errors fixed

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
     <meta charset="= UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,233 +16,194 @@
 
     <div id="Home"></div>
 
-    <div class="bg-color">
-        <div class="parallax">
-            <!-- <video autoplay muted loop id="myVideo">
-                        <source src="black.mov" type="video/mp4">
-                      </video> -->
-            <div id="Home"></div>
 
-        </div>
-        <!-- <div class="part" data-background="black"> -->
-        <div class="par">
-            <div class="topnav">
-                <a class="active" href="#Home">Home</a>
-                <a onClick="document.getElementById('aboutMe').scrollIntoView();">Profile</a>
-                <a href="#Resume">Resume</a>
-                <a href="#Projects">Projects</a>
+    <div class="parallax">
+
+
+    </div>
+
+    <div class="topnav">
+        <a class="active" href="#Home">Home</a>
+        <a onClick="document.getElementById('aboutMe').scrollIntoView();">Profile</a>
+        <a href="#Resume">Resume</a>
+        <a href="#Projects">Projects</a>
+    </div>
+
+
+    <div id="aboutMe"></div>
+
+    <div class="content">
+        <h2>Profile</h2>
+        <hr>
+
+        <div class="row">
+
+            <div class="col-sm-4">
+
+                <h1> About Me </h1>
+                <p>
+                    I am a software developer looking to to expand my knowledge in all things tech related. I
+                    have front end experience both in mobile and
+                    web development. I really love interacting with people and really enjoy projects that not
+                    only challenge me but allow me to express
+                    my creativity. In
+                    my spare time I love to do all things outdoors
+                    as well as photography. Some of my core values include, accountability, dependebility and
+                    open mindedness.
+                </p>
             </div>
 
+            <div class="col-sm-4">
+                <img src="stud2.png" style="vertical-align: middle" class="img">
 
-            <div id="aboutMe"></div>
-
-            <div class="content">
-                <h2>Profile</h2>
-                <hr>
-
-                <div class="row">
-
-                    <div class="col-sm-4">
-
-                        <h1> About Me </h1>
-                        <p>
-                            I am a software developer looking to to expand my knowledge in all things tech related. I
-                            have front end experience both in mobile and
-                            web development. I really love interacting with people and really enjoy projects that not
-                            only challenge me but allow me to express
-                            my creativity. In
-                            my spare time I love to do all things outdoors
-                            as well as photography. Some of my core values include, accountability, dependebility and
-                            open mindedness.
-                        </p>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <img src="stud2.png" style="vertical-align: middle" class="img">
-
-
-                    </div>
-                    <div class="col-sm-4">
-
-                        <h4> Details </h4>
-
-                        <p>
-                            <strong>
-                                Name:
-                            </strong>
-
-                            <br>
-                            Jose Zurita-Oatley
-                            <br>
-
-                            <strong>
-                                Age:
-                            </strong>
-
-                            <br>
-                            23 years
-                            <br>
-
-                            <strong>
-                                Location:
-                            </strong>
-
-                            <br>
-                            Leesburg, Va
-                            <br>
-                            <br>
-
-                            <strong>
-                                Follow Me:
-                            </strong>
-
-                            <div style="text-align: left">
-                                <a href="https://www.linkedin.com/in/josezurita777/" class="fa fa-linkedin"></a>
-                                <a href="https://twitter.com/NoWayJosez" class="fa fa-twitter"></a>
-                                <a href="https://www.instagram.com/nowayjosez/?hl=en" class="fa fa-instagram"></a>
-                                <a href="https://github.com/jez253/PersonalWebsite" class="fa fa-github"></a>
-                            </div>
-                        </p>
-                    </div>
-
-
-
-
-                </div>
-            </div>
-        </div>
-
-
-        <div id="Resume"></div>
-
-        <!-- <div class="part" data-background="#2C2C2C"> -->
-
-            <div class="content">
-                <h2>Resume</h2>
-                <hr>
-                <!-- <p style="text-align:center"> -->
-
-                <div class="frame">
-                    <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no"
-                        class="myIframe" style=" border:none; "></iframe>
-                    <script type="text/javascript" language="javascript">
-                        $('.myIframe').css('height', $(window).height() + 'px');
-                    </script>
-                    
-                    <!-- </p> -->
-                    
-                </div>
-
-                <div id="Projects"></div>
-                <!-- <div class="part" data-background="black"> -->
-                    <div class="content">
-                        <h2>Projects</h2>
-
-
-                        <hr>
-
-
-                <!-- </p> -->
 
             </div>
+            <div class="col-sm-4">
 
-            <div id="Projects"></div>
-            <div class="part" data-background="black">
-                <div class="content">
-                    <h2>Projects</h2>
+                <h4> Details </h4>
 
-                    <hr>
-
-
-
-
-                    <div class="row">
-
-                        <div class="col-sm-4">
-                            <br>
-                            <a href="budget.html">
-                                <h1> Budgetmap </h1>
-                            </a>
-
-                            <div class="container">
-                                <a href="budget.html"> <img src="Budgetmap1.PNG" style="vertical-align: middle"
-                                        class="image">
-                            </div>
-
-
-                        </div>
-
-                        <div class="col-sm-4">
-                            <br>
-                            <h1> PulseR </h1>
-                            <div class="container">
-                                <a href="pulseR.html"><img src="pulseR1.PNG" style="vertical-align: middle"
-                                        class="image">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4">
-                            <br>
-                            <h1> RC Paint </h1>
-                            <div class="container">
-                                <a href="RCPaint.html"><img src="rcPaint.PNG" style="vertical-align: middle"
-                                        class="image"></a>
-                            </div>
-
-                        </div>
-
-
-
-
-                    </div>
-
-                <!-- </div> -->
-                <br>
-                <br>
-                <br>
-                <br>
-                <div class="footer">
-                    <!-- <br> -->
-                    <!-- <br> -->
-                    <p2>
-
-                        Created to demonstrate my skills and portfolio
-
-                        <br>
-                        Would like to thank EZgiphs and pexels as well as artists, creators and
-                        photographers whose work was used in this website
-                        <br>
-                        Created by Jose Zurita-Oatley
-                    </p2>
-
-                </div>
-
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="footer">
-                <!-- <br> -->
-                <!-- <br> -->
-                <p2>
-
-                    Created to demonstrate my skills and portfolio
+                <p>
+                    <strong>
+                        Name:
+                    </strong>
 
                     <br>
-                    Would like to thank EZgiphs and pexels as well as artists, creators and
-                    photographers whose work was used in this website
+                    Jose Zurita-Oatley
                     <br>
-                    Created by Jose Zurita-Oatley
-                </p2>
+
+                    <strong>
+                        Age:
+                    </strong>
+
+                    <br>
+                    23 years
+                    <br>
+
+                    <strong>
+                        Location:
+                    </strong>
+
+                    <br>
+                    Leesburg, Va
+                    <br>
+                    <br>
+
+                    <strong>
+                        Follow Me:
+                    </strong>
+
+                    <div style="text-align: left">
+                        <a href="https://www.linkedin.com/in/josezurita777/" class="fa fa-linkedin"></a>
+                        <a href="https://twitter.com/NoWayJosez" class="fa fa-twitter"></a>
+                        <a href="https://www.instagram.com/nowayjosez/?hl=en" class="fa fa-instagram"></a>
+                        <a href="https://github.com/jez253/PersonalWebsite" class="fa fa-github"></a>
+                    </div>
+                </p>
             </div>
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-            <script src="jquery.scrollie.min.js"></script>
 
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-            <script src="script.js"></script>
+
+
+        </div>
+    </div>
+
+
+
+    <div id="Resume"></div>
+
+    <div class="content">
+        <h2>Resume</h2>
+        <hr>
+
+
+        <div class="frame">
+            <iframe src="Resume4.pdf" height="875" width="637" text-align="center" class="pdf" scrolling="no"
+                class="myIframe" style=" border:none; "></iframe>
+            <script type="text/javascript" language="javascript">
+                $('.myIframe').css('height', $(window).height() + 'px');
+            </script>
+            </iframe>
+
+
+        </div>
+    </div>
+
+    <div id="Projects"></div>
+
+    <div class="content">
+        <h2>Projects</h2>
+
+        <hr>
+
+
+
+
+        <div class="row">
+
+            <div class="col-sm-4">
+                <br>
+                <a href="budget.html">
+                    <h1> Budgetmap </h1>
+                </a>
+
+                <div class="container">
+                    <a href="budget.html"> <img src="Budgetmap1.PNG" style="vertical-align: middle" class="image">
+                </div>
+
+
+            </div>
+
+            <div class="col-sm-4">
+                <br>
+                <h1> PulseR </h1>
+                <div class="container">
+                    <a href="pulseR.html"><img src="pulseR1.PNG" style="vertical-align: middle" class="image">
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <br>
+                <h1> RC Paint </h1>
+                <div class="container">
+                    <a href="RCPaint.html"><img src="rcPaint.PNG" style="vertical-align: middle" class="image"></a>
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+
+
+    </div>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="footer">
+
+        <p2>
+
+            Created to demonstrate my skills and portfolio
+
+            <br>
+            Would like to thank EZgiphs and pexels as well as artists, creators and
+            photographers whose work was used in this website
+            <br>
+            Created by Jose Zurita-Oatley
+        </p2>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="jquery.scrollie.min.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
