--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
 
-    <div id="aboutMe"></div>
+    <!-- <div id="aboutMe"></div> -->
 
     <div class="content">
         <h2>Profile</h2>
@@ -112,7 +112,7 @@
 
 
 
-    <div id="Resume"></div>
+    <!-- <div id="Resume"></div> -->
 
     <div class="content">
         <h2>Resume</h2>
@@ -131,7 +131,7 @@
         </div>
     </div>
 
-    <div id="Projects"></div>
+    <!-- <div id="Projects"></div> -->
 
     <div class="content">
         <h2>Projects</h2>
