--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 
         <div class="frame">
             <iframe src="Resume4.pdf" width=637; height = "875" text-align="center" class="pdf" scrolling="no"
-                class="myIframe" scrolling ="no" style=" border:none; "></iframe>
-            <script type="text/javascript" language="javascript">
+                class="myIframe"  style=" border:none; "></iframe>
+            <!-- <script type="text/javascript" language="javascript">
                 $('.myIframe').css('height', $(window).height() + 'px');
-            </script>
+            </script> -->
             
 
 
