--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
 
-    <!-- <div id="aboutMe"></div> -->
+    <div id="aboutMe"></div>
 
     <div class="content" >
         
@@ -63,7 +63,7 @@
 
 
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4"  style="vertical-align: middle">
 
                 <h4> Details </h4>
 
@@ -97,7 +97,7 @@
                         Follow Me:
                     </strong>
 
-                    <div style="text-align: left">
+                    <div style="text-align: center">
                         <a href="https://www.linkedin.com/in/josezurita777/" class="fa fa-linkedin"></a>
                         <a href="https://twitter.com/NoWayJosez" class="fa fa-twitter"></a>
                         <a href="https://www.instagram.com/nowayjosez/?hl=en" class="fa fa-instagram"></a>
@@ -114,7 +114,7 @@
 
 
 
-    <!-- <div id="Resume"></div> -->
+    <div id="Resume"></div>
 
     <div class="content" >
         <h2>Resume</h2>
@@ -123,17 +123,17 @@
 
         <div class="frame">
             <iframe src="Resume4.pdf" width=637; height = "875" text-align="center" class="pdf" scrolling="no"
-                class="myIframe"  style=" border:none; "></iframe>
-            <!-- <script type="text/javascript" language="javascript">
+                class="myIframe" scrolling = "no" style=" border:none; "></iframe>
+            <script type="text/javascript" language="javascript">
                 $('.myIframe').css('height', $(window).height() + 'px');
-            </script> -->
+            </script>
             
 
 
         </div>
     </div>
 
-    <!-- <div id="Projects"></div> -->
+    <div id="Projects"></div>
 
     <div class="content">
         <h2>Projects</h2>
